spacing fix between menu and search

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -98,7 +98,7 @@
                 }
                 .nav-menu {
                     display: inline-block;
-                    margin-left: 90px;
+                    margin-left: 5px;
                     cursor: pointer;
                     img {
                         width: 15px;
